@@ -1,18 +1,18 @@
 package com.letitbee.diamondvaluationsystem.service.impl;
 
-import com.letitbee.diamondvaluationsystem.entity.Customer;
-import com.letitbee.diamondvaluationsystem.entity.Staff;
-import com.letitbee.diamondvaluationsystem.entity.ValuationRequest;
-import com.letitbee.diamondvaluationsystem.entity.ValuationRequestDetail;
+import com.letitbee.diamondvaluationsystem.entity.*;
 import com.letitbee.diamondvaluationsystem.enums.RequestDetailStatus;
 import com.letitbee.diamondvaluationsystem.enums.RequestStatus;
+import com.letitbee.diamondvaluationsystem.enums.Role;
 import com.letitbee.diamondvaluationsystem.exception.APIException;
 import com.letitbee.diamondvaluationsystem.exception.ResourceNotFoundException;
-import com.letitbee.diamondvaluationsystem.payload.Response;
-import com.letitbee.diamondvaluationsystem.payload.ValuationRequestDTO;
+import com.letitbee.diamondvaluationsystem.payload.*;
 import com.letitbee.diamondvaluationsystem.repository.*;
 import com.letitbee.diamondvaluationsystem.service.ValuationRequestService;
 import org.modelmapper.ModelMapper;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -20,34 +20,34 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
-import java.util.NoSuchElementException;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class ValuationRequestServiceImpl implements ValuationRequestService {
     private ValuationRequestRepository valuationRequestRepository;
     private ValuationRequestDetailRepository valuationRequestDetailRepository;
     private StaffRepository staffRepository;
-    private ServiceRepository serviceRepository;
+    private DiamondValuationNoteRepository diamondValuationNoteRepository;
+    private DiamondValuationNoteServiceImpl diamondValuationNoteServiceImpl;
     private ModelMapper mapper;
 
     public ValuationRequestServiceImpl(ValuationRequestRepository valuationRequestRepository,
                                        ValuationRequestDetailRepository valuationRequestDetailRepository,
                                        StaffRepository staffRepository,
-                                       ServiceRepository serviceRepository,
-                                       ModelMapper mapper) {
+                                       DiamondValuationNoteRepository diamondValuationNoteRepository,
+                                       ModelMapper mapper,
+                                       DiamondValuationNoteServiceImpl diamondValuationNoteServiceImpl) {
         this.valuationRequestRepository = valuationRequestRepository;
         this.valuationRequestDetailRepository = valuationRequestDetailRepository;
         this.staffRepository = staffRepository;
-        this.serviceRepository = serviceRepository;
+        this.diamondValuationNoteRepository = diamondValuationNoteRepository;
         this.mapper = mapper;
+        this.diamondValuationNoteServiceImpl = diamondValuationNoteServiceImpl;
     }
 
     @Override
-    public Response<ValuationRequestDTO> getAllValuationRequests(int pageNo, int pageSize, String sortBy, String sortDir, Date startDate, Date endDate) {
+    public Response<ValuationRequestResponse> getAllValuationRequests(int pageNo, int pageSize, String sortBy, String sortDir, Date startDate, Date endDate) {
         Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(sortBy) : Sort.by(sortBy).descending();
         //Set size page and pageNo
         Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
@@ -55,11 +55,11 @@ public class ValuationRequestServiceImpl implements ValuationRequestService {
         Page<ValuationRequest> page = valuationRequestRepository.findByCreationDateBetween(startDate, endDate, pageable);
         List<ValuationRequest> valuationRequests = page.getContent();
 
-        List<ValuationRequestDTO> listDTO = valuationRequests.
+        List<ValuationRequestResponse> listDTO = valuationRequests.
                 stream().
-                map((valuationRequest) -> mapToDTO(valuationRequest)).toList();
+                map(valuationRequest -> this.mapToResponse(valuationRequest, ValuationRequestResponse.class)).collect(Collectors.toList());
 
-        Response<ValuationRequestDTO> response = new Response<>();
+        Response<ValuationRequestResponse> response = new Response<>();
 
         response.setContent(listDTO);
         response.setPageNumber(page.getNumber());
@@ -69,8 +69,8 @@ public class ValuationRequestServiceImpl implements ValuationRequestService {
         response.setLast(page.isLast());
 
         return response;
-
     }
+
 
     @Override
     public ValuationRequestDTO getValuationRequestById(Long id) {
@@ -89,7 +89,12 @@ public class ValuationRequestServiceImpl implements ValuationRequestService {
             ValuationRequestDetail valuationRequestDetail = new ValuationRequestDetail();
             valuationRequestDetail.setValuationRequest(valuationRequest);
             valuationRequestDetail.setStatus(RequestDetailStatus.PENDING);
-            valuationRequestDetailRepository.save(valuationRequestDetail);
+            valuationRequestDetail.setDiamond(true);
+            valuationRequestDetail = valuationRequestDetailRepository.save(valuationRequestDetail);
+
+            DiamondValuationNote diamondValuationNote = new DiamondValuationNote();
+            diamondValuationNote.setValuationRequestDetail(valuationRequestDetail);
+            diamondValuationNoteRepository.save(diamondValuationNote);
         }
         return mapToDTO(valuationRequest);
     }
@@ -101,25 +106,24 @@ public class ValuationRequestServiceImpl implements ValuationRequestService {
                 .orElseThrow(() -> new ResourceNotFoundException("Valuation Request", "id", id + ""));
         //get staff
         Staff staff = staffRepository.findById(valuationRequestDTO.getStaffID()).orElse(null);
-
-        //update valuation request
         valuationRequest.setStaff(staff);
+        //update valuation request
         valuationRequest.setFeedback(valuationRequestDTO.getFeedback());
         valuationRequest.setReturnDate(valuationRequestDTO.getReturnDate());
         valuationRequest.setReceiptDate(valuationRequestDTO.getReceiptDate());
         valuationRequest.setReturnLink(valuationRequestDTO.getReturnLink());
         valuationRequest.setResultLink(valuationRequestDTO.getResultLink());
-        if(valuationRequest.getReceiptLink() == null && valuationRequestDTO.getReceiptLink() != null) {
+        valuationRequest.setSealingRecordLink(valuationRequestDTO.getSealingRecordLink());
+        if (valuationRequest.getReceiptLink() == null && valuationRequestDTO.getReceiptLink() != null) {
             valuationRequest.setReceiptDate(new Date());
         }
         valuationRequest.setReceiptLink(valuationRequestDTO.getReceiptLink());
-
         valuationRequest.setStatus(valuationRequestDTO.getStatus());
         valuationRequest.setCancelReason(valuationRequestDTO.getCancelReason());
-
-        if(valuationRequest.getReceiptLink() != null){
+        if (valuationRequest.getReceiptLink() != null) {
             valuationRequest.setReturnDate(getReturnDate(valuationRequest));
         }
+
         //save to database
         valuationRequest = valuationRequestRepository.save(valuationRequest);
         //map to dto
@@ -140,8 +144,117 @@ public class ValuationRequestServiceImpl implements ValuationRequestService {
         return mapToDTO(valuationRequest);
     }
 
+    @Override
+    public Response<ValuationRequestResponseV2> getValuationRequestResponse(
+            int pageNo, int pageSize, String sortBy, String sortDir, RequestStatus status) {
+        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(sortBy) : Sort.by(sortBy).descending();
+        //Set size page and pageNo
+        Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
+        Page<ValuationRequest> page;
+        if (status != null) {
+            page = valuationRequestRepository.findAllByStatus(status, pageable);
+        } else {
+            page = valuationRequestRepository.findAll(pageable);
+        }
+
+        List<ValuationRequest> valuationRequests = page.getContent();
+
+        List<ValuationRequestResponseV2> listDTO = valuationRequests.
+                stream().
+                map(valuationRequest -> this.mapToResponse(valuationRequest, ValuationRequestResponseV2.class)).collect(Collectors.toList());
+
+        Response<ValuationRequestResponseV2> response = new Response<>();
+
+        response.setContent(listDTO);
+        response.setPageNumber(page.getNumber());
+        response.setPageSize(page.getSize());
+        response.setTotalPage(page.getTotalPages());
+        response.setTotalElement(page.getTotalElements());
+        response.setLast(page.isLast());
+
+        return response;
+    }
+
+    @Override
+    public Response<ValuationRequestResponseV2> getValuationRequestResponseByStaff(
+            int pageNo, int pageSize, String sortBy, String sortDir, Long staffId) {
+
+        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(sortBy) : Sort.by(sortBy).descending();
+        //Set size page and pageNo
+        Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
+        Page<ValuationRequest> page;
+
+        Staff staff = staffRepository.findById(staffId)
+                .orElseThrow(() -> new ResourceNotFoundException("Staff", "id", staffId + ""));
+        page = valuationRequestRepository.findValuationRequestByStaff_Id(staff, pageable);
+
+        List<ValuationRequest> valuationRequests = page.getContent();
+
+        List<ValuationRequestResponseV2> listDTO = valuationRequests.
+                stream().
+                map(valuationRequest -> this.mapToResponse(valuationRequest, ValuationRequestResponseV2.class)).collect(Collectors.toList());
+
+        Response<ValuationRequestResponseV2> response = new Response<>();
+
+        response.setContent(listDTO);
+        response.setPageNumber(page.getNumber());
+        response.setPageSize(page.getSize());
+        response.setTotalPage(page.getTotalPages());
+        response.setTotalElement(page.getTotalElements());
+        response.setLast(page.isLast());
+
+        return response;
+    }
+
+    @Override
+    public Response<ValuationRequestResponseV2> getValuationRequestByCustomerId(int pageNo,
+                                                                                int pageSize,
+                                                                                String sortBy,
+                                                                                String sortDir,
+                                                                                Long customerId) {
+        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(sortBy) : Sort.by(sortBy).descending();
+        //Set size page and pageNo
+        Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
+        Page<ValuationRequest> page = valuationRequestRepository.findValuationRequestByCustomer_Id(customerId, pageable);
+        List<ValuationRequest> valuationRequests = page.getContent();
+
+        List<ValuationRequestResponseV2> listDTO = valuationRequests.
+                stream().
+                map(valuationRequest -> this.mapToResponse(valuationRequest, ValuationRequestResponseV2.class)).collect(Collectors.toList());
+
+        Response<ValuationRequestResponseV2> response = new Response<>();
+
+        response.setContent(listDTO);
+        response.setPageNumber(page.getNumber());
+        response.setPageSize(page.getSize());
+        response.setTotalPage(page.getTotalPages());
+        response.setTotalElement(page.getTotalElements());
+        response.setLast(page.isLast());
+
+        return response;
+    }
+
+
     private ValuationRequestDTO mapToDTO(ValuationRequest valuationRequest) {
-        return mapper.map(valuationRequest, ValuationRequestDTO.class);
+        ValuationRequestDTO valuationRequestDTO = mapper.map(valuationRequest, ValuationRequestDTO.class);
+        Set<ValuationRequestDetailDTO> valuationRequestDetailDTOSet = new HashSet<>();
+        for (ValuationRequestDetail valuationRequestDetail : valuationRequest.getValuationRequestDetails()) {
+            ValuationRequestDetailDTO valuationRequestDetailDTO = mapper.map(valuationRequestDetail, ValuationRequestDetailDTO.class);
+            if (valuationRequestDetail.getDiamondValuationNote() != null
+                    && valuationRequestDetail.getDiamondValuationNote().getClarityCharacteristic() != null) {
+                DiamondValuationNoteDTO diamondValuationNoteDTO =
+                        diamondValuationNoteServiceImpl.getDiamondValuationNoteById(
+                                valuationRequestDetail.getDiamondValuationNote().getId());
+                valuationRequestDetailDTO.setDiamondValuationNote(diamondValuationNoteDTO);
+            }
+            valuationRequestDetailDTOSet.add(valuationRequestDetailDTO);
+        }
+        valuationRequestDTO.setValuationRequestDetails(valuationRequestDetailDTOSet);
+        return valuationRequestDTO;
+    }
+
+    private <T> T mapToResponse(ValuationRequest valuationRequest, Class<T> responseType) {
+        return mapper.map(valuationRequest, responseType);
     }
 
     private ValuationRequest mapToEntity(ValuationRequestDTO valuationRequestDTO) {
@@ -157,35 +270,33 @@ public class ValuationRequestServiceImpl implements ValuationRequestService {
         com.letitbee.diamondvaluationsystem.entity.Service service = valuationRequest.getService();
         int period = service.getPeriod();
         int totalHourService = valuationRequest.getDiamondAmount() * period;
-        Date receiptDate = dateRounding(valuationRequest.getReceiptDate());
+        Date receiptDate = valuationRequest.getReceiptDate();
         Calendar calendar = Calendar.getInstance();
         calendar.setTime(receiptDate);
-        int remainHourInDay = 17 - calendar.get(Calendar.HOUR_OF_DAY);
+        int hourOfDay = calendar.get(Calendar.HOUR_OF_DAY);
+        int minuteOfDay = calendar.get(Calendar.MINUTE);
+        int secondOfDay = calendar.get(Calendar.SECOND);
+
+        int remainHourInDay = 17 - hourOfDay - ((minuteOfDay > 0 || secondOfDay > 0) ? 1 : 0);
         int remainHourService = totalHourService - remainHourInDay;
+
         if (remainHourService <= 0) {
             calendar.add(Calendar.HOUR_OF_DAY, totalHourService);
             return calendar.getTime();
         }
+
         int count = 0;
-        int hourInLastDay = 0;
-        while(remainHourService - 9 > 0) {
+        while (remainHourService > 9) {
             count++;
             remainHourService -= 9;
-            hourInLastDay = remainHourService;
         }
+        int hourInLastDay = remainHourService;
+
         calendar.add(Calendar.DAY_OF_MONTH, count);
-        calendar.set(Calendar.HOUR_OF_DAY, 8 +  hourInLastDay);
+        calendar.set(Calendar.HOUR_OF_DAY, 8 + hourInLastDay);
+
         return calendar.getTime();
     }
 
-
-    private Date dateRounding(Date date) {
-        Calendar calendar = Calendar.getInstance();
-        calendar.setTime(date);
-        calendar.add(Calendar.HOUR_OF_DAY, 1);
-        calendar.set(Calendar.MINUTE, 0);
-        calendar.set(Calendar.SECOND, 0);
-        return calendar.getTime();
-    }
 
 }
